# palvalidator

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  policies.json  try_randgen.cpp
libs/PALCodeGenLibrary-v2/: CMakeLists.txt  EasyLanguageCodeGenerator.cpp  EasyLanguageFromTemplateCodeGen.cpp  Makefile  PalAst.cpp  PalAst.h  PalCodeGenVisitor.cpp  PalCodeGenVisitor.h  PalCodeGenerator.cpp  PalParseDriver.cpp  PalParseDriver.h  PalParser.cpp  PalParser.hpp  PalScanner.cpp  PalScanner.hpp  PriceActionLabSystem.cpp  QuantConnectCodeGenerator.cpp  Security.h  SecurityFactory.h  StopTargetDetail.h  TradingBloxCodeGenerator.cpp  WealthLabCodeGenerator.cpp  el_template.txt  grammar.yy  lexer.ll  location.hh  position.hh  stack.hh
libs/backtesting/: BackTester.h  BacktesterStrategy.cpp  BacktesterStrategy.h  BidAskSpread.h  BoostDateHelper.h  CMakeLists.txt  ClosedPositionHistory.h  ExcursionTrajectory.h  ExitPolicyAutoTuner.h  ExitPolicyJointAutoTuner.h  InstrumentPosition.h  InstrumentPositionManager.h  InstrumentPositionManagerException.h  LogPalPattern.cpp  LogPalPattern.h  MCPTStrategyAttributes.h  MarketHours.h  MetaExitAnalytics.h  MetaExitCalibrator.h  MonthlyReturnsBuilder.h  OrderType.cpp  OrderType.h  PALPatternClassifier.h  PALPatternInterpreter.h  PalStrategy.h  PatternPositionRegistry.cpp  PatternPositionRegistry.h  PercentNumber.h  Portfolio.h  PortfolioFilter.h  PositionPathAnalytics.h  ProfitTarget.h  README.md  Security.h  SecurityAttributes.h  SecurityAttributesFactory.h  SecurityBacktestProperties.h  StopLoss.h  StrategyBroker.h  StrategyTransaction.h  (+8 more)
libs/concurrency/: CMakeLists.txt  IParallelExecutor.h  ParallelExecutors.h  ParallelFor.h  README.md  runner.cpp  runner.hpp
libs/pasearchalgo/: BacktestResultBaseGenerator.h  CMakeLists.txt  FileMatcher.h  PalStrategyAlwaysOn.h  PalToComparison.h  PatternMatcher.h  PatternReRunner.h  SearchAlgoConfigurationFileReader.cpp  SearchAlgoConfigurationFileReader.h  SearchController.h  ShortcutSearchAlgoBacktester.h  SteppingPolicy.h  SurvivingStrategiesContainer.h  TimeFilteredCsvReader.h  valarraymutualizer.h
libs/pasearchalgolib/: BacktestProcessor.h  BacktestResultBaseGenerator.h  CMakeLists.txt  ComparableBar.h  ComparisonToPal.h  ComparisonToPalStrategy.h  ComparisonsCombiner.h  ComparisonsGenerator.h  FileMatcher.h  ForwardStepwiseSelector.h  OriginalSearchAlgoBacktester.h  PalStrategyAlwaysOn.h  PalToComparison.h  PatternMatcher.h  PatternReRunner.h  SearchAlgoConfigurationFileReader.cpp  SearchAlgoConfigurationFileReader.h  SearchBacktestPolicy.h  SearchController.h  SearchRun.h  ShortcutBacktester.h  ShortcutSearchAlgoBacktester.h  Sorters.h  StdEstimator.h  SteppingPolicy.h  SurvivalPolicy.h  SurvivingStrategiesContainer.h  TimeFilteredCsvReader.h  UniqueSinglePAMatrix.h  ValarrayMutualizer.h  valarraymutualizer.h
libs/patterndiscovery/: BinaryPatternTemplateDeserializer.cpp  BinaryPatternTemplateDeserializer.h  BinaryPatternTemplateSerializer.cpp  BinaryPatternTemplateSerializer.h  CMakeLists.txt  ExhaustivePatternSearchEngine.h  PatternCondition.h  PatternDiscoveryTask.h  PatternEvaluationTask.h  PatternTemplate.cpp  PatternTemplate.h  PatternUniverseDeserializer.cpp  PatternUniverseDeserializer.h  PatternUniverseSerializer.cpp  PatternUniverseSerializer.h  PatternUtilities.cpp  PatternUtilities.h  PerformanceCriteria.h  PriceComponentDescriptor.h  PricePatternFactory.h  README.md  SearchConfiguration.h
libs/priceactionlab/: AstResourceManager.cpp  AstResourceManager.h  CMakeLists.txt  EasyLanguageFromTemplateCodeGen.cpp  Makefile  Makefile~  PalAst.cpp  PalAst.h  PalCodeGenVisitor.cpp  PalCodeGenVisitor.h  PalCodeGenerator.cpp  PalParseDriver.cpp  PalParseDriver.h  PalParser.cpp  PalParser.hpp  PriceActionLabSystem.cpp  QuantConnectCodeGenerator.cpp  README.md  StopTargetDetail.h  TradingBloxCodeGenerator.cpp  WealthLab8CodeGenerator.h  WealthLabCodeGenerator.cpp  decimal.h  el_template.txt  grammar.yy  lexer.ll  location.hh  scanner.h
libs/statistics/: AdaptiveRatioInternal.h  AdaptiveRatioPolicies.h  Annualizer.h  AutoBootstrapConfiguration.h  AutoBootstrapScoring.h  AutoBootstrapSelector.h  AutoCIResult.h  BarAlignedSeries.h  BasicBootstrap.h  BiasCorrectedBootstrap.h  BootstrapException.h  BootstrapPenaltyCalculator.h  BootstrapTypes.h  BoundFutureReturns.h  BoundedDrawdowns.h  CMakeLists.txt  CandidateReject.h  IMastersSelectionBiasAlgorithm.h  LogRobustnessTest.h  MOutOfNPercentileBootstrap.h  MastersPermutationTestComputationPolicy.h  MastersRomanoWolf.h  MastersRomanoWolfImproved.h  MetaLosingStreakBootstrapBound.h  MetaSelectionBootstrap.h  MonteCarloPermutationTest.h  MonteCarloTestPolicy.h  MultipleTestingCorrection.h  NormalBootstrap.h  NormalDistribution.h  NormalQuantile.h  PALMastersMonteCarloValidation.h  PALMastersMonteCarloValidationObserver.h  PALMonteCarloTypes.h  PALMonteCarloValidation.h  PALRomanoWolfMonteCarloValidation.h  PercentileBootstrap.h  PercentileTBootstrap.h  PermutationStatisticsCollector.h  PermutationTestComputationPolicy.h  (+24 more)
libs/testinfra/: CMakeLists.txt  TestUtils.cpp  (+1 more)
tests/: AAPL_RAD_Daily.txt  AAPL_RAD_Hourly.txt  BackTesterTest.cpp  BarchartDataSourceReaderTest.cpp  BoostDateHelperTest.cpp  C2Config.txt  CL_R1_0_Dev1.txt  CL_R1_0_Dev1_Config.txt  CL_RAD.txt  CMakeLists.txt  ClosedPositionHistoryTest.cpp  DataSourceReaderTest.cpp  InstrumentPositionManagerTest.cpp  InstrumentPositionTest.cpp  LimitOrderTest.cpp  LogPalPatternTest.cpp  MCPTStrategyAttributesTest.cpp  Makefile  MarketOrderTest.cpp  McptConfigurationFileReaderTest.cpp  MonteCarloPermutationTest2.cpp  OpenPositionBarTest.cpp  OpenPositionHistoryTest.cpp  OpenPositionTest.cpp  PALMonteCarloValidationTest.cpp  PALPatternInterpreterTest.cpp  PalStrategyTest.cpp  PatternOutputFile.txt  PercentNumberTest.cpp  PortfolioTest.cpp  PositionManagerTest.cpp  ProcessLimitOrderTest.cpp  ProcessMarketOrderTest.cpp  ProcessStopOrderTest.cpp  ProfitTargetTest.cpp  RobustnessTestUnitTest.cpp  RobustnessTesterUnitTest.cpp  SSO_RAD_Daily.txt  SSO_RAD_Hourly.txt  SecurityAttributesFactoryTest.cpp  (+21 more)
(+2259 files in other folders)
